static/src/scss/_search.scss
@keyframes search-loading {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

body.page-searchpage {
  .search-controls {
    margin: 2rem auto;
    max-width: 80%;
  }

  .htmx-request {
    animation: search-loading 1.5s linear infinite;
  }

  #search-results > p {
    font-size: 1.5rem;
    text-align: center;
  }

  #result-count {
    margin-bottom: 1rem;
  }

  input[type="search"] {
    @include dark-mode {
      background-color: color.adjust($dark, $alpha: -0.2);
      color: $white;

      &::placeholder {
        color: rgba(214 210 205 / 80%);
      }

      &:focus ~ .icon {
        color: $grey-light !important;
      }
    }
  }

  .listing-item {
    margin-top: 2rem;
  }

  .search-page-indicator {
    width: 100%;

    &:not(.htmx-request) {
      display: none;
    }
  }
}

